--- a/requirements.txt
+++ b/requirements.txt
@@ -15,11 +15,13 @@ defusedxml==0.7.1
 Django==5.2
 et_xmlfile==2.0.0
 fonttools==4.57.0
+gunicorn==23.0.0
 html5lib==1.1
 idna==3.10
 lxml==5.3.2
 openpyxl==3.1.5
 oscrypto==1.3.0
+packaging==25.0
 pillow==11.1.0
 pycparser==2.22
 pydyf==0.11.0
